dark mode fixed

--- a/src/app/title-bar/title-bar.scss
+++ b/src/app/title-bar/title-bar.scss
@@ -1,6 +1,6 @@
 .app-nav-btn{
-	border: 1px solid var(--bs-light);
-	color: var(--bs-light);
+	border: 1px solid var(--bs-border-color);
+	color: var(--bs-body-color);
 	width:100%;
 	min-width:150px;
 }
@@ -12,7 +12,7 @@
 .app-nav-btn.active {
 	background-color: var(--bs-primary);
 	border-color: var(--bs-primary);
-	color: var(--bs-dark);
+	color: var(--bs-white);
 	text-decoration: underline;
 	font-weight: 700;
 }
